[gd_scene load_steps=23 format=3 uid="uid://oegluvynj82j"]

[ext_resource type="FontFile" uid="uid://cyv5okyo2hgew" path="res://assets/poco.ttf" id="1_7yea8"]
[ext_resource type="Script" path="res://menu/credit_text.gd" id="1_hhboj"]
[ext_resource type="PackedScene" uid="uid://bt8rys4gdifi7" path="res://backgrounds/bg_root.tscn" id="1_tfm6s"]
[ext_resource type="Texture2D" uid="uid://dyf7lem61nytb" path="res://assets/misc/logo_credit.png" id="2_caudl"]
[ext_resource type="PackedScene" uid="uid://kyel1hdn48jx" path="res://backgrounds/bg_branch.tscn" id="2_cpbvj"]
[ext_resource type="Texture2D" uid="uid://ceg5b0l8ggr83" path="res://icon.svg" id="2_nqvl8"]
[ext_resource type="PackedScene" uid="uid://dkq0tbvylto6" path="res://backgrounds/bg_trunk.tscn" id="3_nfo5i"]
[ext_resource type="Texture2D" uid="uid://b5k8nxe2rejwd" path="res://assets/sprites/ui_death.png" id="3_xsrx7"]
[ext_resource type="Texture2D" uid="uid://pul8s0lksqe7" path="res://assets/sprites/Logo_Aseprite.png" id="3_yt0rf"]
[ext_resource type="Texture2D" uid="uid://drr5rida50gpe" path="res://assets/sprites/collectible.png" id="4_45f2e"]
[ext_resource type="Texture2D" uid="uid://cabreiqttbi55" path="res://assets/sprites/ui_time.png" id="5_knahf"]
[ext_resource type="Texture2D" uid="uid://1s7gfjsoi22j" path="res://assets/sprites/ui_strike.png" id="9_d5uhx"]
[ext_resource type="Texture2D" uid="uid://c5ludhbp05skh" path="res://assets/misc/transition.png" id="9_rqkie"]

[sub_resource type="Animation" id="Animation_7ckat"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texts:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(128, 480)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 240)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StatTexts:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StatTexts:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Transition:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nfasb"]
resource_name = "fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 240), Vector2(320, -320)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4y7pk"]
resource_name = "fade_out"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 800), Vector2(320, 240)]
}

[sub_resource type="Animation" id="Animation_hd8bp"]
resource_name = "scroll"
length = 24.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texts:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 24),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(128, 480), Vector2(128, -1200)]
}

[sub_resource type="Animation" id="Animation_ur36o"]
resource_name = "show_final"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StatTexts:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StatTexts:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_10xwt"]
_data = {
"RESET": SubResource("Animation_7ckat"),
"fade_in": SubResource("Animation_nfasb"),
"fade_out": SubResource("Animation_4y7pk"),
"scroll": SubResource("Animation_hd8bp"),
"show_final": SubResource("Animation_ur36o")
}

[sub_resource type="Animation" id="Animation_auhvx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Continue:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0xki5"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Continue:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_50cen"]
_data = {
"RESET": SubResource("Animation_auhvx"),
"idle": SubResource("Animation_0xki5")
}

[node name="CreditText" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hhboj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_10xwt")
}

[node name="Texts" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 480.0
offset_right = 512.0
offset_bottom = 1647.0

[node name="VBox" type="VBoxContainer" parent="Texts"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Texts/VBox"]
layout_mode = 2
texture = ExtResource("2_caudl")
stretch_mode = 3

[node name="Credits" type="Label" parent="Texts/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "CREDITS"
horizontal_alignment = 1

[node name="Divide0" type="Label" parent="Texts/VBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="CreditNames" type="VBoxContainer" parent="Texts/VBox"]
layout_mode = 2

[node name="Team" type="Label" parent="Texts/VBox/CreditNames"]
layout_mode = 2
theme_override_colors/font_color = Color(0.678431, 0.372549, 0.588235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Team Bunglon"
horizontal_alignment = 1

[node name="Person1" type="Label" parent="Texts/VBox/CreditNames"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Rayhan Ryu"
horizontal_alignment = 1

[node name="Person2" type="Label" parent="Texts/VBox/CreditNames"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Ramadhan Azka Dhamawan"
horizontal_alignment = 1

[node name="Person3" type="Label" parent="Texts/VBox/CreditNames"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Naufal Zhafari Zahran"
horizontal_alignment = 1

[node name="Person4" type="Label" parent="Texts/VBox/CreditNames"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Ivan Rabbani Cezeliano"
horizontal_alignment = 1

[node name="Person5" type="Label" parent="Texts/VBox/CreditNames"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Alvaro Luqman Widyadharma"
horizontal_alignment = 1

[node name="Divide1" type="Label" parent="Texts/VBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="CreditAssets" type="VBoxContainer" parent="Texts/VBox"]
clip_contents = true
layout_mode = 2

[node name="ThirdParty" type="Label" parent="Texts/VBox/CreditAssets"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.313726, 0.337255, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Third Party Assets"
horizontal_alignment = 1

[node name="Sound" type="Label" parent="Texts/VBox/CreditAssets"]
layout_mode = 2
theme_override_colors/font_color = Color(0.760784, 0.396078, 0.172549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Sound Effects"
horizontal_alignment = 1

[node name="Name1" type="Label" parent="Texts/VBox/CreditAssets"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Juhani Junkala (OpenGameArt.org)"
horizontal_alignment = 1

[node name="Name2" type="Label" parent="Texts/VBox/CreditAssets"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Freesound"
horizontal_alignment = 1

[node name="Name3" type="Label" parent="Texts/VBox/CreditAssets"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "RPG Maker 2000"
horizontal_alignment = 1

[node name="Addon" type="Label" parent="Texts/VBox/CreditAssets"]
layout_mode = 2
theme_override_colors/font_color = Color(0.760784, 0.396078, 0.172549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Stopwatch Addon"
horizontal_alignment = 1

[node name="Name" type="Label" parent="Texts/VBox/CreditAssets"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "GuaraProductions"
horizontal_alignment = 1

[node name="Divide2" type="Label" parent="Texts/VBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="CreditMusic" type="VBoxContainer" parent="Texts/VBox"]
layout_mode = 2

[node name="Music" type="Label" parent="Texts/VBox/CreditMusic"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.313726, 0.337255, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Music
"
horizontal_alignment = 1

[node name="Music1" type="HBoxContainer" parent="Texts/VBox/CreditMusic"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MusicTitle" type="Label" parent="Texts/VBox/CreditMusic/Music1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.760784, 0.396078, 0.172549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "In The Castle"
horizontal_alignment = 1

[node name="Artist" type="Label" parent="Texts/VBox/CreditMusic/Music1"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "alkakrab
"
horizontal_alignment = 1

[node name="Music2" type="HBoxContainer" parent="Texts/VBox/CreditMusic"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MusicTitle" type="Label" parent="Texts/VBox/CreditMusic/Music2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.760784, 0.396078, 0.172549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Dark Dungeon"
horizontal_alignment = 1

[node name="Artist" type="Label" parent="Texts/VBox/CreditMusic/Music2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "alkakrab"
horizontal_alignment = 1

[node name="Music3" type="HBoxContainer" parent="Texts/VBox/CreditMusic"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MusicTitle" type="Label" parent="Texts/VBox/CreditMusic/Music3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.760784, 0.396078, 0.172549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Ghost Castle"
horizontal_alignment = 1

[node name="Artist" type="Label" parent="Texts/VBox/CreditMusic/Music3"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "alkakrab"
horizontal_alignment = 1

[node name="Music4" type="HBoxContainer" parent="Texts/VBox/CreditMusic"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MusicTitle" type="Label" parent="Texts/VBox/CreditMusic/Music4"]
layout_mode = 2
theme_override_colors/font_color = Color(0.760784, 0.396078, 0.172549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Hall of the King"
horizontal_alignment = 1

[node name="Artist" type="Label" parent="Texts/VBox/CreditMusic/Music4"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "alkakrab"
horizontal_alignment = 1

[node name="Divide4" type="Label" parent="Texts/VBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="CreditTech" type="VBoxContainer" parent="Texts/VBox"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Tech" type="Label" parent="Texts/VBox/CreditTech"]
layout_mode = 2
theme_override_colors/font_color = Color(0.333333, 0.443137, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Software Used:"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Texts/VBox/CreditTech"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Godot" type="VBoxContainer" parent="Texts/VBox/CreditTech/HBox"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="Texts/VBox/CreditTech/HBox/Godot"]
layout_mode = 2
texture = ExtResource("2_nqvl8")

[node name="Name" type="Label" parent="Texts/VBox/CreditTech/HBox/Godot"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Godot 4"
horizontal_alignment = 1

[node name="Aseprite" type="VBoxContainer" parent="Texts/VBox/CreditTech/HBox"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="Texts/VBox/CreditTech/HBox/Aseprite"]
layout_mode = 2
texture = ExtResource("3_yt0rf")

[node name="Name" type="Label" parent="Texts/VBox/CreditTech/HBox/Aseprite"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Aseprite"
horizontal_alignment = 1

[node name="Divide3" type="Label" parent="Texts/VBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="Name2" type="Label" parent="Texts/VBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "This software is licensed under
GNU General Public License v3.0
and its internal assets are licensed under
Creative Commons BY-NC-SA 4.0

© Team Bunglon 2024"
horizontal_alignment = 1

[node name="StatTexts" type="HBoxContainer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_top = -1.0
offset_right = 640.0
offset_bottom = 479.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Stats" type="VBoxContainer" parent="StatTexts"]
clip_contents = true
layout_mode = 2
alignment = 1

[node name="Thanks" type="Label" parent="StatTexts/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0.780392, 0.654902, 0.356863, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Thank You For Playing!"
horizontal_alignment = 1

[node name="Stats" type="Label" parent="StatTexts/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 30
text = "Final Stats:"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="StatTexts/Stats"]
layout_mode = 2
theme_override_constants/margin_top = 12

[node name="HBoxCount" type="HBoxContainer" parent="StatTexts/Stats"]
layout_mode = 2
alignment = 1

[node name="RectStrike" type="TextureRect" parent="StatTexts/Stats/HBoxCount"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("9_d5uhx")
expand_mode = 2

[node name="LabelStrike" type="Label" parent="StatTexts/Stats/HBoxCount"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "0
"

[node name="Margin0" type="MarginContainer" parent="StatTexts/Stats/HBoxCount"]
layout_mode = 2
theme_override_constants/margin_left = 24

[node name="RectDeath" type="TextureRect" parent="StatTexts/Stats/HBoxCount"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_xsrx7")
expand_mode = 2

[node name="LabelDeath" type="Label" parent="StatTexts/Stats/HBoxCount"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="Margin1" type="MarginContainer" parent="StatTexts/Stats/HBoxCount"]
layout_mode = 2
theme_override_constants/margin_left = 24

[node name="RectCollect" type="TextureRect" parent="StatTexts/Stats/HBoxCount"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_45f2e")
expand_mode = 2

[node name="LabelCollect" type="Label" parent="StatTexts/Stats/HBoxCount"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "0/12"

[node name="Margin2" type="MarginContainer" parent="StatTexts/Stats/HBoxCount"]
layout_mode = 2
theme_override_constants/margin_left = 24

[node name="RectTime" type="TextureRect" parent="StatTexts/Stats/HBoxCount"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("5_knahf")
expand_mode = 2

[node name="LabelTime" type="Label" parent="StatTexts/Stats/HBoxCount"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "00:00"

[node name="MarginContainer2" type="MarginContainer" parent="StatTexts/Stats"]
layout_mode = 2
theme_override_constants/margin_top = 12

[node name="Hardest" type="Label" parent="StatTexts/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.545098, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Hardest Floor (X deaths):"
horizontal_alignment = 1

[node name="LevelName" type="Label" parent="StatTexts/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Sample Level Name"
horizontal_alignment = 1

[node name="BackgroundRoot" parent="." instance=ExtResource("1_tfm6s")]
visible = false
metadata/_edit_lock_ = true

[node name="BackgroundTrunk" parent="." instance=ExtResource("3_nfo5i")]
metadata/_edit_lock_ = true

[node name="BackgroundBranch" parent="." instance=ExtResource("2_cpbvj")]
visible = false
metadata/_edit_lock_ = true

[node name="BackgroundFruit" parent="." instance=ExtResource("3_nfo5i")]
visible = false
trunk_background = 3
metadata/_edit_lock_ = true

[node name="Transition" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(320, 240)
scale = Vector2(4, 4)
texture = ExtResource("9_rqkie")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationText" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_50cen")
}

[node name="Continue" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(20, 0)
layout_mode = 0
offset_left = 64.0
offset_top = 424.0
offset_right = 576.0
offset_bottom = 448.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7yea8")
theme_override_font_sizes/font_size = 20
text = "Press [SPACE] to continue..."
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
